--- a/kaltura.html
+++ b/kaltura.html
@@ -1,6 +1,6 @@
 ---
 title: Get External URL for a Kaltura Video
-layout: main
+layout: page
 ---
 <div class="container">
 <p>This page will take a Kaltura media URL from <a href="https://brockport.mediaspace.kaltura.com" target="_blank">MediaSpace</a> and convert it to a URL that can be used outside of Blackboard. In order to find the Kaltura media URL:</p>
